// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/molecules/FormFooter with submit and cancel button 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c3 {
  background-color: #00B0CA;
  padding: 0.9rem 3.7rem;
  border: none;
  border-radius: 40px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: auto;
}

.c3:hover {
  background-color: #0BC1DC;
  color: #fff;
}

.c3:active {
  background-color: #029FB7;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c3:disabled {
  background-color: #F1F2F7;
  color: #B8BCD5;
  cursor: default;
}

.c3:disabled,
.c3:disabled:hover {
  cursor: default;
}

.c4 {
  display: inline-block;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  font-size: 1rem;
  font-weight: 600;
  color: rgb(33,18,94);
  background: transparent;
  outline: none;
  border: none;
  box-shadow: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  padding: 0;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
}

.c2:hover {
  color: #513CA3;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
}

.c1 button:last-child {
  margin-left: 2rem;
}

@media (max-width:540px) {
  .c3 {
    padding: 0.9rem 1rem;
    width: 88%;
  }
}

@media (max-width:540px) {
  .c1 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:540px) {
  .c1 button:last-child {
    margin-left: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
      color="secondary"
      onClick={[Function]}
      size="md"
      type="button"
    >
      Cancel
    </button>
    <button
      className="c3"
      color="primary"
      disabled={false}
      onClick={[Function]}
      size="md"
      type="button"
    >
      <span
        className="c4"
        size="md"
      >
        Save
      </span>
    </button>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/molecules/FormFooter with submit button 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 {
  background-color: #00B0CA;
  padding: 0.9rem 3.7rem;
  border: none;
  border-radius: 40px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: auto;
}

.c2:hover {
  background-color: #0BC1DC;
  color: #fff;
}

.c2:active {
  background-color: #029FB7;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c2:disabled {
  background-color: #F1F2F7;
  color: #B8BCD5;
  cursor: default;
}

.c2:disabled,
.c2:disabled:hover {
  cursor: default;
}

.c3 {
  display: inline-block;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
}

.c1 button:last-child {
  margin-left: 2rem;
}

@media (max-width:540px) {
  .c2 {
    padding: 0.9rem 1rem;
    width: 88%;
  }
}

@media (max-width:540px) {
  .c1 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:540px) {
  .c1 button:last-child {
    margin-left: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
      color="primary"
      disabled={false}
      onClick={[Function]}
      size="md"
      type="button"
    >
      <span
        className="c3"
        size="md"
      >
        Save
      </span>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`Storyshots @components/molecules/FormFooter with top divider 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 {
  background-color: #00B0CA;
  padding: 0.9rem 3.7rem;
  border: none;
  border-radius: 40px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: auto;
}

.c2:hover {
  background-color: #0BC1DC;
  color: #fff;
}

.c2:active {
  background-color: #029FB7;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c2:disabled {
  background-color: #F1F2F7;
  color: #B8BCD5;
  cursor: default;
}

.c2:disabled,
.c2:disabled:hover {
  cursor: default;
}

.c3 {
  display: inline-block;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-top: 1px solid #f1f5f5;
}

.c1 button:last-child {
  margin-left: 2rem;
}

@media (max-width:540px) {
  .c2 {
    padding: 0.9rem 1rem;
    width: 88%;
  }
}

@media (max-width:540px) {
  .c1 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:540px) {
  .c1 button:last-child {
    margin-left: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
      color="primary"
      disabled={false}
      onClick={[Function]}
      size="md"
      type="button"
    >
      <span
        className="c3"
        size="md"
      >
        Save
      </span>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;
